Logger added and mediator abstraction added

--- a/src/WebAPI/appsettings.Production.json
+++ b/src/WebAPI/appsettings.Production.json
@@ -15,7 +15,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "/Logs/log-development-.txt",
+          "path": "/Logs/log-production-.txt",
           "rollingInterval": "Day",
           "rollOnFileSizeLimit": true,
           "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
@@ -25,7 +25,7 @@
     "Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithThreadId" ],
     "Properties": {
       "Application": "Your ASP.NET Core App",
-      "Environment": "Development"
+      "Environment": "Production"
     }
   }
 }
