--- a/src/WebAPI/appsettings.Production.json
+++ b/src/WebAPI/appsettings.Production.json
@@ -15,7 +15,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "/Logs/log-production-.txt",
+          "path": "../WebAPI/Logs/production-log-.txt",
           "rollingInterval": "Day",
           "rollOnFileSizeLimit": true,
           "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
@@ -24,7 +24,7 @@
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithThreadId" ],
     "Properties": {
-      "Application": "Your ASP.NET Core App",
+      "Application": "CQRS Clean Architechture Template",
       "Environment": "Production"
     }
   }
