--- a/src/WebAPI/appsettings.Development.json
+++ b/src/WebAPI/appsettings.Development.json
@@ -27,5 +27,11 @@
       "Application": "CQRS Clean Architechture Template",
       "Environment": "Development"
     }
+  },
+
+  "JWTOptions": {
+    "ValidAudience": "http://localhost:51095",
+    "ValidIssuer": "http://localhost:51095",
+    "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
   }
 }
