--- a/src/WebAPI/appsettings.json
+++ b/src/WebAPI/appsettings.json
@@ -28,5 +28,12 @@
       "Environment": "Development"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+
+  "JWTOptions": {
+    "ValidAudience": "http://localhost:51095",
+    "ValidIssuer": "http://localhost:51095",
+    "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
+  }
 }
