--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -19,4 +19,10 @@
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTOs\Requests\" />
+    <Folder Include="Extensions\" />
+    <Folder Include="Attributes\" />
+  </ItemGroup>
+
 </Project>
