--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -24,6 +24,7 @@
     <Folder Include="DTOs\Requests\" />
     <Folder Include="Extensions\" />
     <Folder Include="Attributes\" />
+    <Folder Include="Utilities\Mappers\" />
   </ItemGroup>
 
 </Project>
