--- a/src/WebAPI/appsettings.Development.json
+++ b/src/WebAPI/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "AppDbConnection": "Data Source=MAHMUDULRAFI;Initial Catalog=CleanDB;Persist Security Info=False;User ID=sa;Password=12345;Pooling=False;Multiple Active Result Sets=False;Encrypt=True;Trust Server Certificate=True;Command Timeout=0;"
+  },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": {
@@ -32,6 +35,6 @@
   "JWTOptions": {
     "ValidAudience": "http://localhost:51095",
     "ValidIssuer": "http://localhost:51095",
-    "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
+    "Secret": "ThisIsASpecialSecretKey_90cb862b-c1c9-49ae-abb4-898705a757a2"
   }
 }
