--- a/src/WebAPI/appsettings.Production.json
+++ b/src/WebAPI/appsettings.Production.json
@@ -27,5 +27,10 @@
       "Application": "CQRS Clean Architechture Template",
       "Environment": "Production"
     }
+  },
+  "JWTOptions": {
+    "ValidAudience": "http://localhost:51095",
+    "ValidIssuer": "http://localhost:51095",
+    "Secret": "ThisIsASpecialSecretKey_90cb862b-c1c9-49ae-abb4-898705a757a2"
   }
 }
